--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
         "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-separator": "^1.1.8",
         "@radix-ui/react-slot": "^1.2.4",
+        "@reduxjs/toolkit": "^2.11.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-redux": "^9.2.0",
         "tailwindcss": "^4.0.0"
     },
     "devDependencies": {
